add: 二叉树的最小深度