@@ -3,9 +3,11 @@ package org.github.fourth.leetcode;
 import org.github.fourth.leetcode.common.TreeNode;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
 
@@ -15,19 +17,21 @@ import static org.junit.jupiter.params.provider.Arguments.arguments;
 class LeetCode_111_minDepthTest {
     private final LeetCode_111_minDepth minDepth = new LeetCode_111_minDepth();
 
-    //    @ParameterizedTest
+    @ParameterizedTest
     @MethodSource("generateRightCase")
     public void test01(TreeNode root, int expectedResult) {
         int actResult = minDepth.minDepth01(root);
         Assertions.assertEquals(expectedResult, actResult);
     }
-    //    @ParameterizedTest
+
+    @ParameterizedTest
     @MethodSource("generateRightCase")
     public void test02(TreeNode root, int expectedResult) {
         int actResult = minDepth.minDepth02(root);
         Assertions.assertEquals(expectedResult, actResult);
     }
-    //    @ParameterizedTest
+
+    @ParameterizedTest
     @MethodSource("generateRightCase")
     public void test(TreeNode root, int expectedResult) {
         int actResult = minDepth.minDepthExample(root);
@@ -36,8 +40,12 @@ class LeetCode_111_minDepthTest {
 
     public static Stream<Arguments> generateRightCase() {
         return Stream.of(
-                arguments(TreeNode.build(List.of(3, 9, 20, null, null, 15, 7)), 2),
-                arguments(TreeNode.build(List.of(2, null, 3, null, 4, null, 5, null, 6)), 5)
+                arguments(TreeNode.build(Arrays.asList(3, 9, 20, null, null, 15, 7)), 2),
+                arguments(TreeNode.build(Arrays.asList(2,
+                        null, 3,
+                        null, null, 4, null,
+                        null, null, null, null, null, 5, null, null,
+                        null, null, null, null, null, null, null, null, null, null, 6, null, null, null, null, null)), 5)
         );
     }
 }
